--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@
   /**
    * typography
    */
-  
+
   --ff-roboto: 'Roboto', sans-serif;
   --ff-josefin-sans: 'Josefin Sans', sans-serif;
 
@@ -88,9 +88,13 @@
   box-sizing: border-box;
 }
 
-li { list-style: none; }
+li {
+  list-style: none;
+}
 
-a { text-decoration: none; }
+a {
+  text-decoration: none;
+}
 
 a,
 img,
@@ -98,7 +102,9 @@ span,
 table,
 tbody,
 button,
-ion-icon { display: block; }
+ion-icon {
+  display: block;
+}
 
 button,
 input {
@@ -107,9 +113,13 @@ input {
   border: none;
 }
 
-input { width: 100%; }
+input {
+  width: 100%;
+}
 
-button { cursor: pointer; }
+button {
+  cursor: pointer;
+}
 
 address {
   font-style: normal;
@@ -128,13 +138,21 @@ body {
   padding-block-start: 90px;
 }
 
-::-webkit-scrollbar { width: 10px; }
+::-webkit-scrollbar {
+  width: 10px;
+}
 
-::-webkit-scrollbar-track { background: hsl(0, 0%, 95%); }
+::-webkit-scrollbar-track {
+  background: hsl(0, 0%, 95%);
+}
 
-::-webkit-scrollbar-thumb { background: hsl(0, 0%, 80%); }
+::-webkit-scrollbar-thumb {
+  background: hsl(0, 0%, 80%);
+}
 
-::-webkit-scrollbar-thumb:hover { background: hsl(0, 0%, 70%); }
+::-webkit-scrollbar-thumb:hover {
+  background: hsl(0, 0%, 70%);
+}
 
 
 
@@ -144,14 +162,20 @@ body {
  * #REUSED STYLE
 \*-----------------------------------*/
 
-.container { padding-inline: 15px; }
+.container {
+  padding-inline: 15px;
+}
 
-.section { padding-block: var(--section-padding); }
+.section {
+  padding-block: var(--section-padding);
+}
 
 .h1,
 .h2,
 .h3,
-.h4 { color: var(--rich-black-fogra-29); }
+.h4 {
+  color: var(--rich-black-fogra-29);
+}
 
 .h1 {
   font-size: var(--fs-1);
@@ -159,9 +183,13 @@ body {
   line-height: 1.5;
 }
 
-.h2 { font-size: var(--fs-2); }
+.h2 {
+  font-size: var(--fs-2);
+}
 
-.h3 { font-size: var(--fs-4); }
+.h3 {
+  font-size: var(--fs-4);
+}
 
 .h4 {
   font-size: var(--fs-5);
@@ -190,7 +218,9 @@ body {
   --color: var(--black);
 }
 
-.btn-secondary:is(:hover, :focus) { --background: hsla(0, 0%, 0%, 0.1); }
+.btn-secondary:is(:hover, :focus) {
+  --background: hsla(0, 0%, 0%, 0.1);
+}
 
 .has-scrollbar {
   display: flex;
@@ -200,12 +230,14 @@ body {
   scroll-snap-type: inline mandatory;
 }
 
-.has-scrollbar > li {
+.has-scrollbar>li {
   min-width: 100%;
   scroll-snap-align: start;
 }
 
-.has-scrollbar::-webkit-scrollbar { height: 10px; }
+.has-scrollbar::-webkit-scrollbar {
+  height: 10px;
+}
 
 .has-scrollbar::-webkit-scrollbar-track {
   background: var(--white);
@@ -219,7 +251,9 @@ body {
   border-radius: 20px;
 }
 
-.has-scrollbar::-webkit-scrollbar-button { width: calc(25% - 40px); }
+.has-scrollbar::-webkit-scrollbar-button {
+  width: calc(25% - 40px);
+}
 
 .card-banner {
   background: var(--cultured);
@@ -236,7 +270,9 @@ body {
   transition: var(--transition-2);
 }
 
-.product-card:is(:hover, :focus) .image-contain { transform: scale(1.1); }
+.product-card:is(:hover, :focus) .image-contain {
+  transform: scale(1.1);
+}
 
 .card-badge {
   position: absolute;
@@ -263,9 +299,13 @@ body {
   opacity: 1;
 }
 
-.card-action-item { position: relative; }
+.card-action-item {
+  position: relative;
+}
 
-.card-action-item:not(:last-child) { margin-bottom: 10px; }
+.card-action-item:not(:last-child) {
+  margin-bottom: 10px;
+}
 
 .card-action-btn {
   background: var(--white);
@@ -276,7 +316,9 @@ body {
   transition: var(--transition-1);
 }
 
-.card-action-btn ion-icon { --ionicon-stroke-width: 30px; }
+.card-action-btn ion-icon {
+  --ionicon-stroke-width: 30px;
+}
 
 .card-action-btn:is(:hover, :focus) {
   background: var(--bittersweet);
@@ -300,7 +342,9 @@ body {
   transition: var(--transition-1);
 }
 
-.card-action-btn:is(:hover, :focus) + .card-action-tooltip { opacity: 1; }
+.card-action-btn:is(:hover, :focus)+.card-action-tooltip {
+  opacity: 1;
+}
 
 .card-content {
   padding: 24px 15px 0;
@@ -320,16 +364,22 @@ body {
   transition: var(--transition-1);
 }
 
-.card-cat-link:is(:hover, :focus) { color: var(--bittersweet); }
+.card-cat-link:is(:hover, :focus) {
+  color: var(--bittersweet);
+}
 
-.product-card .card-title { margin-bottom: 12px; }
+.product-card .card-title {
+  margin-bottom: 12px;
+}
 
-.product-card .card-title > a {
+.product-card .card-title>a {
   color: inherit;
   transition: var(--transition-1);
 }
 
-.product-card .card-title > a:is(:hover, :focus) { color: var(--bittersweet); }
+.product-card .card-title>a:is(:hover, :focus) {
+  color: var(--bittersweet);
+}
 
 .card-price {
   color: var(--bittersweet);
@@ -355,7 +405,9 @@ body {
   border-bottom: 1px solid var(--white);
 }
 
-.btn-link:is(:hover, :focus) { border-color: transparent; }
+.btn-link:is(:hover, :focus) {
+  border-color: transparent;
+}
 
 
 
@@ -375,7 +427,9 @@ body {
   z-index: 4;
 }
 
-.header.active { box-shadow: 0 2px 10px hsla(0, 0%, 0%, 0.1); }
+.header.active {
+  box-shadow: 0 2px 10px hsla(0, 0%, 0%, 0.1);
+}
 
 .header .container {
   display: flex;
@@ -391,9 +445,13 @@ body {
   padding: 8px;
 }
 
-.nav-open-btn:is(:hover, :focus) { background: var(--salmon); }
+.nav-open-btn:is(:hover, :focus) {
+  background: var(--salmon);
+}
 
-.nav-open-btn ion-icon { --ionicon-stroke-width: 40px; }
+.nav-open-btn ion-icon {
+  --ionicon-stroke-width: 40px;
+}
 
 .navbar {
   background: var(--white);
@@ -428,19 +486,27 @@ body {
   transition: var(--transition-1);
 }
 
-.nav-close-btn ion-icon { --ionicon-stroke-width: 55px; }
+.nav-close-btn ion-icon {
+  --ionicon-stroke-width: 55px;
+}
 
-.nav-close-btn:is(:hover, :focus) { color: var(--bittersweet); }
+.nav-close-btn:is(:hover, :focus) {
+  color: var(--bittersweet);
+}
 
 .navbar .logo {
   background: var(--maximum-blue-green_10);
   padding-block: 50px 40px;
 }
 
-.navbar .logo img { margin-inline: auto; }
+.navbar .logo img {
+  margin-inline: auto;
+}
 
 .navbar-list,
-.nav-action-list { margin: 30px; }
+.nav-action-list {
+  margin: 30px;
+}
 
 .navbar-list {
   padding: 20px;
@@ -453,11 +519,17 @@ body {
   transition: var(--transition-1);
 }
 
-.navbar-link:is(:hover, :focus) { color: var(--bittersweet); }
+.navbar-link:is(:hover, :focus) {
+  color: var(--bittersweet);
+}
 
-.navbar-item:not(:last-child) { border-bottom: 1px solid var(--gainsboro); }
+.navbar-item:not(:last-child) {
+  border-bottom: 1px solid var(--gainsboro);
+}
 
-.nav-action-list > li:first-child { display: none; }
+.nav-action-list>li:first-child {
+  display: none;
+}
 
 .nav-action-btn {
   color: var(--rich-black-fogra-29);
@@ -469,7 +541,9 @@ body {
   transition: var(--transition-1);
 }
 
-.nav-action-btn:is(:hover, :focus) { color: var(--bittersweet); }
+.nav-action-btn:is(:hover, :focus) {
+  color: var(--bittersweet);
+}
 
 .nav-action-btn ion-icon {
   font-size: 22px;
@@ -526,9 +600,13 @@ body {
   align-items: center;
 }
 
-.hero-title { margin-bottom: 10px; }
+.hero-title {
+  margin-bottom: 10px;
+}
 
-.hero-title > strong { display: block; }
+.hero-title>strong {
+  display: block;
+}
 
 .hero-text {
   color: var(--onyx);
@@ -667,7 +745,9 @@ body {
   gap: 20px;
 }
 
-.special .section-title .text { min-width: max-content; }
+.special .section-title .text {
+  min-width: max-content;
+}
 
 .special .section-title .line {
   width: 100%;
@@ -691,7 +771,9 @@ body {
   padding-inline: 30px;
 }
 
-.service-item { width: 220px; }
+.service-item {
+  width: 220px;
+}
 
 .service-card {
   display: flex;
@@ -738,7 +820,9 @@ body {
  * #INSTA POST
 \*-----------------------------------*/
 
-.insta-post-list { gap: 0; }
+.insta-post-list {
+  gap: 0;
+}
 
 .insta-post-list .insta-post-item {
   position: relative;
@@ -761,7 +845,9 @@ body {
   font-size: 40px;
 }
 
-.insta-post-link:is(:hover, :focus) { opacity: 1; }
+.insta-post-link:is(:hover, :focus) {
+  opacity: 1;
+}
 
 
 
@@ -771,9 +857,13 @@ body {
  * #FOOTER
 \*-----------------------------------*/
 
-.footer { font-family: var(--ff-roboto); }
+.footer {
+  font-family: var(--ff-roboto);
+}
 
-.footer-top { background: var(--cultured); }
+.footer-top {
+  background: var(--cultured);
+}
 
 .footer-brand {
   padding-bottom: 50px;
@@ -781,7 +871,9 @@ body {
   margin-bottom: 50px;
 }
 
-.footer-brand .logo { margin-bottom: 15px; }
+.footer-brand .logo {
+  margin-bottom: 15px;
+}
 
 .social-list {
   display: flex;
@@ -829,11 +921,17 @@ body {
   transition: var(--transition-1);
 }
 
-a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
+a.footer-link:is(:hover, :focus) {
+  color: var(--bittersweet);
+}
 
-.footer-link-text { flex: 1; }
+.footer-link-text {
+  flex: 1;
+}
 
-.footer-list:not(:last-child) { margin-bottom: 30px; }
+.footer-list:not(:last-child) {
+  margin-bottom: 30px;
+}
 
 .footer-list:first-child ion-icon {
   color: var(--bittersweet);
@@ -852,7 +950,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
   font-weight: var(--fw-500);
 }
 
-.table-data { color: var(--onyx); }
+.table-data {
+  color: var(--onyx);
+}
 
 .newsletter-text {
   color: var(--onyx);
@@ -860,7 +960,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
   margin-bottom: 20px;
 }
 
-.newsletter-form { position: relative; }
+.newsletter-form {
+  position: relative;
+}
 
 .newsletter-input {
   background: var(--white);
@@ -924,7 +1026,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
   visibility: visible;
 }
 
-.go-top-btn:is(:hover, :focus) { background: var(--salmon); }
+.go-top-btn:is(:hover, :focus) {
+  background: var(--salmon);
+}
 
 
 
@@ -966,7 +1070,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
     margin-inline: auto;
   }
 
-  .has-scrollbar > li { min-width: calc(50% - 12.5px); }
+  .has-scrollbar>li {
+    min-width: calc(50% - 12.5px);
+  }
 
 
 
@@ -974,7 +1080,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * HERO
    */
 
-  .hero-text { font-size: var(--fs-7); }
+  .hero-text {
+    font-size: var(--fs-7);
+  }
 
 
 
@@ -982,7 +1090,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * PRODUCTS
    */
 
-  .product-list { grid-template-columns: 1fr 1fr; }
+  .product-list {
+    grid-template-columns: 1fr 1fr;
+  }
 
 
 
@@ -990,11 +1100,17 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * CTA
    */
 
-  .cta-card { text-align: left; }
+  .cta-card {
+    text-align: left;
+  }
 
-  .cta-card .card-title { max-width: 14ch; }
+  .cta-card .card-title {
+    max-width: 14ch;
+  }
 
-  .cta-card .btn-link { margin-inline: 0; }
+  .cta-card .btn-link {
+    margin-inline: 0;
+  }
 
 
 
@@ -1002,7 +1118,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * INSTA POST
    */
 
-  .insta-post-list .insta-post-item { min-width: 25%; }
+  .insta-post-list .insta-post-item {
+    min-width: 25%;
+  }
 
 
 
@@ -1010,7 +1128,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * FOOTER
    */
 
-  .footer-brand .logo { margin-bottom: 0; }
+  .footer-brand .logo {
+    margin-bottom: 0;
+  }
 
   .footer-brand {
     display: flex;
@@ -1056,9 +1176,13 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * REUSED STYLE
    */
 
-  .container { max-width: 720px; }
+  .container {
+    max-width: 720px;
+  }
 
-  .h4 { --fs-5: 2rem; }
+  .h4 {
+    --fs-5: 2rem;
+  }
 
 
 
@@ -1066,21 +1190,31 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * SPECIAL
    */
 
-  .special-banner .banner-title { --fs-4: 2.2rem; }
+  .special-banner .banner-title {
+    --fs-4: 2.2rem;
+  }
 
-  .special-product .has-scrollbar > li { min-width: 100%; }
+  .special-product .has-scrollbar>li {
+    min-width: 100%;
+  }
 
   .special .container {
     display: flex;
     gap: 25px;
   }
 
-  .special .section-title { margin-block-start: 0; }
+  .special .section-title {
+    margin-block-start: 0;
+  }
 
   .special-banner,
-  .special-product { min-width: calc(50% - 12.5px); }
+  .special-product {
+    min-width: calc(50% - 12.5px);
+  }
 
-  .special-banner { height: auto; }
+  .special-banner {
+    height: auto;
+  }
 
 
 
@@ -1088,7 +1222,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * INSTA POST
    */
 
-  .insta-post-list .insta-post-item { min-width: 20%; }
+  .insta-post-list .insta-post-item {
+    min-width: 20%;
+  }
 
 
 
@@ -1135,9 +1271,13 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * REUSED STYLE
    */
 
-  .container { max-width: 970px; }
+  .container {
+    max-width: 970px;
+  }
 
-  .has-scrollbar > li { min-width: calc(33.33% - 16.66px); }
+  .has-scrollbar>li {
+    min-width: calc(33.33% - 16.66px);
+  }
 
 
 
@@ -1149,18 +1289,28 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
   .nav-close-btn,
   .navbar .logo,
   .nav-action-text,
-  .overlay { display: none; }
+  .overlay {
+    display: none;
+  }
 
   .navbar,
   .navbar-list,
-  .nav-action-list { all: unset; }
+  .nav-action-list {
+    all: unset;
+  }
 
-  .navbar-item:not(:last-child) { border: none; }
+  .navbar-item:not(:last-child) {
+    border: none;
+  }
 
   .navbar-list,
-  .nav-action-list { display: flex; }
+  .nav-action-list {
+    display: flex;
+  }
 
-  .nav-action-list { gap: 20px; }
+  .nav-action-list {
+    gap: 20px;
+  }
 
   .navbar {
     display: flex;
@@ -1178,11 +1328,17 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
     font-weight: var(--fw-500);
   }
 
-  .nav-action-list > li:first-child { display: block; }
+  .nav-action-list>li:first-child {
+    display: block;
+  }
 
-  .nav-action-btn { position: relative; }
+  .nav-action-btn {
+    position: relative;
+  }
 
-  .nav-action-badge ion-icon { --ionicon-stroke-width: 30px; }
+  .nav-action-badge ion-icon {
+    --ionicon-stroke-width: 30px;
+  }
 
   .nav-action-badge {
     position: absolute;
@@ -1196,7 +1352,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * HERO
    */
 
-  .hero { height: 480px; }
+  .hero {
+    height: 480px;
+  }
 
 
 
@@ -1204,7 +1362,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * PRODUCTS
    */
 
-  .product-list { grid-template-columns: repeat(3, 1fr); }
+  .product-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
 
 
 
@@ -1217,7 +1377,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
     gap: 25px;
   }
 
-  .cta-card { padding-inline: 50px; }
+  .cta-card {
+    padding-inline: 50px;
+  }
 
 
 
@@ -1225,11 +1387,17 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * SPECIAL
    */
 
-  .special-banner { min-width: calc(33.33% - 25px); }
+  .special-banner {
+    min-width: calc(33.33% - 25px);
+  }
 
-  .special-product { min-width: 66.66%; }
+  .special-product {
+    min-width: 66.66%;
+  }
 
-  .special-product .has-scrollbar > li { min-width: calc(50% - 12.5px); }
+  .special-product .has-scrollbar>li {
+    min-width: calc(50% - 12.5px);
+  }
 
 
 
@@ -1237,7 +1405,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * INSTA POST
    */
 
-  .insta-post-list .insta-post-item { min-width: 16.666%; }
+  .insta-post-list .insta-post-item {
+    min-width: 16.666%;
+  }
 
 }
 
@@ -1272,7 +1442,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * REUSED STYLE
    */
 
-  .container { max-width: 1280px; }
+  .container {
+    max-width: 1280px;
+  }
 
 
 
@@ -1280,9 +1452,13 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * HERO
    */
 
-  .hero { height: 580px; }
+  .hero {
+    height: 580px;
+  }
 
-  .hero .container { max-width: 1000px; }
+  .hero .container {
+    max-width: 1000px;
+  }
 
   .hero-text {
     font-size: var(--fs-6);
@@ -1295,7 +1471,9 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * PRODUCTS
    */
 
-  .product-list { grid-template-columns: repeat(4, 1fr); }
+  .product-list {
+    grid-template-columns: repeat(4, 1fr);
+  }
 
 
 
@@ -1303,11 +1481,17 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * SPECIAL
    */
 
-  .special-banner { min-width: calc(25% - 25px); }
+  .special-banner {
+    min-width: calc(25% - 25px);
+  }
 
-  .special-product .has-scrollbar > li { min-width: calc(33.33% - 16.66px); }
+  .special-product .has-scrollbar>li {
+    min-width: calc(33.33% - 16.66px);
+  }
 
-  .special-banner .banner-title { --fs-4: 2.4rem; }
+  .special-banner .banner-title {
+    --fs-4: 2.4rem;
+  }
 
 
 
@@ -1315,14 +1499,18 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * SERVICE
    */
 
-  .service-item { width: 275px; }
+  .service-item {
+    width: 275px;
+  }
 
   .service-card .card-icon {
     min-width: 70px;
     height: 70px;
   }
 
-  .service-card .card-title { --fs-6: 2rem; }
+  .service-card .card-title {
+    --fs-6: 2rem;
+  }
 
 
 
@@ -1330,11 +1518,17 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
    * INSTA POST
    */
 
-  .insta-post { padding-block-end: 0; }
+  .insta-post {
+    padding-block-end: 0;
+  }
 
-  .insta-post-list .insta-post-item { min-width: 12.5%; }
+  .insta-post-list .insta-post-item {
+    min-width: 12.5%;
+  }
 
-  .insta-post-list { padding-bottom: 0; }
+  .insta-post-list {
+    padding-bottom: 0;
+  }
 
 
 
